--- a/services/file_service/Dockerfile
+++ b/services/file_service/Dockerfile
@@ -32,7 +32,8 @@ WORKDIR /app/services/file_service
 
 # Install dependencies for the file_service using its own pyproject.toml
 # PDM will use the overrides to find local dependencies at the correct paths
-RUN pdm install --prod
+# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
+RUN pdm install --prod --frozen-lockfile
 
 RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser && \
     chown -R appuser:appuser /app
