--- a/services/websocket_service/Dockerfile
+++ b/services/websocket_service/Dockerfile
@@ -26,7 +26,8 @@ COPY services/websocket_service/ /app/services/websocket_service/
 WORKDIR /app/services/websocket_service
 
 # Install dependencies for the websocket_service using its own pyproject.toml
-RUN pdm install --prod
+# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
+RUN pdm install --prod --frozen-lockfile
 
 # Setup user and permissions. Note: chown needs to be run as root.
 USER root
