--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ volumes:
   class_management_db_data:
   result_aggregator_db_data:
   spellchecker_db_data:
+  file_service_db_data:
 
 # Include the separate infrastructure and application service definitions.
 # Docker Compose will merge these files into a single project configuration.
