--- a/docker-compose.infrastructure.yml
+++ b/docker-compose.infrastructure.yml
@@ -87,6 +87,28 @@ services:
       retries: 5
       start_period: 30s
 
+  # PostgreSQL database for File Service
+  file_service_db:
+    image: postgres:15
+    container_name: huleedu_file_service_db
+    restart: unless-stopped
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "5439:5432"
+    environment:
+      - POSTGRES_DB=file_service_db
+      - POSTGRES_USER=${HULEEDU_DB_USER}
+      - POSTGRES_PASSWORD=${HULEEDU_DB_PASSWORD}
+    volumes:
+      - file_service_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${HULEEDU_DB_USER} -d file_service_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
   # Redis cache for idempotency and session management
   redis:
     image: redis:7-alpine
