--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,8 @@ ignore = [
 "services/*/worker.py" = ["E402"]
 # Union import needed for Pydantic model rebuilding (not directly used in file)
 "libs/common_core/src/common_core/__init__.py" = ["F401"]
+# Allow imports after sys.path modification in alembic env files
+"services/*/alembic/env.py" = ["E402"]
 
 # Note: Import restrictions would be enforced through custom linting rules
 # For now, rely on type system and code review to prevent standard library logging
