--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
 ]
 
 [tool.pdm.scripts]
+start = "python worker_main.py"
 start-worker = "python worker_main.py"
 
 # Alembic database migration commands
