--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -600,3 +600,34 @@ services:
       retries: 3
       start_period: 20s
 
+  nlp_service:
+    build:
+      context: .
+      dockerfile: services/nlp_service/Dockerfile
+    container_name: huleedu_nlp_service
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      content_service:
+        condition: service_healthy
+      nlp_db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    environment:
+      - ENV_TYPE=docker
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+      - NLP_SERVICE_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - NLP_SERVICE_CONTENT_SERVICE_URL=http://content_service:8000/v1/content
+      - NLP_SERVICE_LOG_LEVEL=INFO
+      - NLP_SERVICE_REDIS_URL=redis://redis:6379
+      # Database configuration
+      - NLP_SERVICE_DATABASE_URL=postgresql+asyncpg://${HULEEDU_DB_USER}:${HULEEDU_DB_PASSWORD}@nlp_db:5432/nlp_service
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_SERVICE_NAME=nlp_service
+      - OTEL_TRACES_EXPORTER=otlp
+      - OTEL_METRICS_EXPORTER=none
+
