--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sqlalchemy",
     "asyncpg",
     "alembic",
+    "rapidfuzz",
 ]
 
 [build-system]
@@ -46,6 +47,7 @@ dev = [
     "pytest-asyncio>=0.26.0",
     "pytest-cov>=6.1.1",
     "pytest-mock",
+    "faker",
 ]
 
 [tool.pdm.scripts]
