--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ monorepo-tools = [
     "testcontainers[postgres,kafka,redis]",  # For PostgreSQL, Kafka, and Redis integration tests
     "kafka-python",
     "respx",
+    "freezegun",  # For time-based testing
     "types-psutil",  # Type stubs for psutil
     "reportlab",  # For PDF generation in file service integration tests
     "types-reportlab",  # Type stubs for reportlab
