--- a/services/class_management_service/alembic.ini
+++ b/services/class_management_service/alembic.ini
@@ -47,8 +47,8 @@ output_encoding = utf-8
 [post_write_hooks]
 # Post-write hook for formatting with ruff
 hooks = ruff_format
-ruff_format.type = console_scripts
-ruff_format.entrypoint = ruff
+ruff_format.type = exec
+ruff_format.executable = ../../.venv/bin/ruff
 ruff_format.options = format REVISION_SCRIPT_FILENAME
 
 # Logging configuration
