feat: add comprehensive test coverage for name matching and student matching implementations

--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "asyncpg",
     "alembic",
     "rapidfuzz",
+    "python-docx",  # For testing with real .docx essays
 ]
 
 [build-system]
