feat: add batch student association handling to class management service

--- a/services/nlp_service/pyproject.toml
+++ b/services/nlp_service/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "huleedu-service-libs",
     "pydantic",
     "pydantic-settings",
+    "pypandoc",
     "sqlalchemy",
     "asyncpg",
     "alembic",
