feat: implement parallel spellcheck with adaptive edit distance and whitelist support
- Add comprehensive spellchecker optimizations and whitelist functionality
- Implement parallel processing for improved performance
- Add adaptive edit distance algorithms for better accuracy
- Create extensive whitelist data for notable people and proper nouns
- Add AI feedback service implementation task documentation
- Remove deprecated large database file and add to .gitignore
- Update various service tests and configurations
- Add new HTTP operations and parallel processor implementations

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ services/spellchecker_service/data/corrected_essays
 data/corrected_essays
 test_uploads/
 
+# Large data files
+services/spellchecker_service/data/cross-verified-database.csv.gz
+services/spellchecker_service/data/*.csv.gz
+
 # Local development stores and caches
 .local_*
 services/*/.local_*
