feat: implement teacher notification projector for ELS batch phase outcomes

--- a/services/file_service/alembic.ini
+++ b/services/file_service/alembic.ini
@@ -50,7 +50,7 @@ sourceless = false
 # Format using Ruff
 hooks = ruff
 ruff.type = exec
-ruff.executable = ruff
+ruff.executable = ../../.venv/bin/ruff
 ruff.options = format REVISION_SCRIPT_FILENAME
 
 # Logging configuration
