feat: implement transactional outbox pattern for reliable event publishing

--- a/libs/huleedu_service_libs/src/huleedu_service_libs/outbox/templates/create_outbox_table.py.template
+++ b/libs/huleedu_service_libs/src/huleedu_service_libs/outbox/templates/create_outbox_table.py.template
@@ -63,13 +63,19 @@ def upgrade() -> None:
             "event_data",
             postgresql.JSON(astext_type=sa.Text()),
             nullable=False,
-            comment="JSON payload containing the full event envelope including topic",
+            comment="JSON payload containing the full event envelope",
         ),
         sa.Column(
             "event_key",
             sa.String(255),
             nullable=True,
             comment="Optional key for Kafka partitioning",
+        ),
+        sa.Column(
+            "topic",
+            sa.String(255),
+            nullable=False,
+            comment="Kafka topic to publish to",
         ),
         sa.Column(
             "created_at",
